--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "cdbreact": "^1.5.18",
     "i18next": "^23.9.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
@@ -26,6 +27,7 @@
     "react-i18next": "^14.0.5",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
+    "react-select": "^5.8.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
